# tactile-genesis

./: .gitignore  README.md
Eden/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
Eden/eden/: __init__.py  __main__.py  _logging.py  constants.py  terms.py  types.py
Eden/eden/entities/: __init__.py  _grouped_contacts.py  base.py  camera.py  fem.py  particle.py  rigid.py  sensor.py  support_mixin.py  terrain.py
Eden/eden/envs/: __init__.py  base.py  draw_debug_mixin.py
Eden/eden/envs/wrappers/: rsl_rl_env.py
Eden/eden/extensions/: __init__.py
Eden/eden/extensions/deployment/: __init__.py  base.py  robotera_xhand.py
Eden/eden/extensions/sysid/: __init__.py  base.py  deployment_recorder.py  excitation.py  modifier.py  parameter.py  report.py  residual.py  rollout.py  trajectory.py
Eden/eden/extensions/visualization/: viser.py
Eden/eden/managers/: __init__.py  action_manager.py  base.py  command_manager.py  curriculum_manager.py  event_manager.py  metric_manager.py  observation_manager.py  recorder_manager.py  reward_manager.py  termination_manager.py
Eden/eden/managers/modifiers/: __init__.py  base.py
Eden/eden/managers/terms/: __init__.py
Eden/eden/options/: __init__.py  actuators.py  camera.py  entities.py  envs.py  file_handler.py  materials.py  options.py  renderer.py  sensors.py  surfaces.py
Eden/eden/options/extensions/: __init__.py  sysid.py
Eden/eden/options/learning/: __init__.py
Eden/eden/options/managers/: __init__.py  actions.py  base.py  commands.py  curricula.py  events.py  metrics.py  modifiers.py  observations.py  recorders.py  rewards.py  terminations.py
Eden/eden/options/robots/: __init__.py  aloha_vx300s.py  franka_emika_panda.py  franka_hand.py  i2rt_yam.py  inspire_rh56.py  leap_hand.py  mano_hand.py  robotera_xhand.py  robotiq_2f85.py  sharpa_wave.py  tesollo_dg5f.py  trossen_widowx250.py  universal_ur10e.py  universal_ur5e.py
Eden/eden/options/scenes/: __init__.py  empty.py  tabletop.py
Eden/eden/tasks/: __init__.py  parser.py  registry.py
Eden/eden/utils/: __init__.py  actuator.py  assets.py  common.py  configs.py  distributed.py  format.py  geom.py  isaac_math.py  mesh.py  misc.py  random.py  registry.py  sample.py  string.py  torch.py
Eden/eden/utils/buffers/: circular_buffer.py  delay_buffer.py
Eden/eden/utils/devices/: __init__.py  base.py  gui_slider.py
Eden/eden/utils/file_handler/: __init__.py  base.py  episode_data.py  hdf5_file_handler.py  npz_file_handler.py
Eden/eden/utils/terrains/: __init__.py  base.py  heightfield_terrains.py  procedural_terrains.py
dexterous-hands/: .env.example  .gitattributes  .gitignore  README.md  main.py  pyproject.toml
dexterous-hands/checkpoints/teachers/: in_hand_repose-sharpa.pt  in_hand_repose-sharpa.yaml  in_hand_repose-xhand1.pt  in_hand_repose-xhand1.yaml  in_palm_rotate-xhand1.pt  in_palm_rotate-xhand1.yaml  screwdriver-sharpa.pt  screwdriver-sharpa.yaml  screwdriver-xhand1.pt  screwdriver-xhand1.yaml
dexterous-hands/conf/: distill_configs.yaml
dexterous-hands/conf/experiments/: tiny.yaml
dexterous-hands/conf/sample_grasps/: screwdrivers_sharpa.yaml  screwdrivers_xhand1.yaml
dexterous-hands/conf/sensor/: tactile_params.yaml  xhand1_deploy_sensor_params.yaml
dexterous-hands/data/sharpa/: manual_params.yaml
dexterous-hands/data/xhand_sysid/: manual_params.yaml
dexterous-hands/scripts/: expand_distill_config.py  grasps_generator.py  imgui_panels.py  manual_calibration_gui.py  robot_dofs_viewer.py  sensor_probes_selector.py  sensors_viewer.py  submit_distill.sh  task_viewer.py
dexterous-hands/scripts/slurm/: run.sh  run_distill.sh
dexterous-hands/src/: deploy.py  model_config.py  optimization.py  registry.py  shared_terms.py  tactile_compare.py  tactile_record.py  tactile_sensors.py  task_mods.py  utils.py
dexterous-hands/src/assets/grasps/: screwdrivers_sharpa_grasps_64.pt  screwdrivers_xhand1_grasps_64.pt
dexterous-hands/src/assets/objects/: dex_cube.urdf
dexterous-hands/src/calibration/: README.md  action_mod_sysid.py  collect_data.py  identify.py  sysid_config.py  sysid_rollout.py  verify.py
dexterous-hands/src/entities/: objects.py  screwdrivers.py
dexterous-hands/src/entities/robots/: __init__.py  sharpa_hand.py  xhand1.py
dexterous-hands/src/models/: __init__.py  pre_encode_mlp.py  tactile_encoders.py  tactile_pre_encode.py
dexterous-hands/src/tasks/: __init__.py
dexterous-hands/src/tasks/in_hand_repose/: config.py  custom_terms.py
(+179 files in other folders)
